--- a/modulo III - colocando um prototipo no ar/desafios/d012/style.css
+++ b/modulo III - colocando um prototipo no ar/desafios/d012/style.css
@@ -1,8 +1,19 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 :root {
@@ -14,6 +25,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -25,6 +37,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header > p {
@@ -49,7 +63,8 @@ section {
     font-family: var(--fonte2);
     font-weight: bold;
     font-style: italic;
-    font-size: 1.5em;
+    font-size: 3.5vw;
+    font-family: var(--fonte3);
 }
 
 section.normal {
@@ -64,7 +79,8 @@ section.imagem {
 
 section.imagem > p {
     background-color: rgba(0, 0, 0, 0.295);
-    width: 400px;
+    padding: 10px;
+    display: inline-block;
 }
 
 footer {
