--- a/modulo III - colocando um prototipo no ar/desafios/d012/style.css
+++ b/modulo III - colocando um prototipo no ar/desafios/d012/style.css
@@ -67,6 +67,10 @@ section {
     font-family: var(--fonte3);
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -74,13 +78,27 @@ section.normal {
 
 section.imagem {
     background-color: rgb(51, 51, 51);
-    color: white;    
+    color: white;   
+    box-shadow: inset 6px 6px 13px 0px #0000008e;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    background-color: rgba(0, 0, 0, 0.295);
+    background-color: rgba(0, 0, 0, 0.51);
     padding: 10px;
     display: inline-block;
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01 {
+    background-image: url(../d012/imagens/background001.jpg);
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url(../d012/imagens/background002.jpg);
+    background-position: right center;
 }
 
 footer {
