--- a/modulo III - colocando um prototipo no ar/desafios/d012/style.css
+++ b/modulo III - colocando um prototipo no ar/desafios/d012/style.css
@@ -92,12 +92,12 @@ section.imagem > p {
 }
 
 section#img01 {
-    background-image: url(../d012/imagens/background001.jpg);
+    background-image: url('../d012/imagens/background001.jpg');
     background-position: right center;
 }
 
 section#img02 {
-    background-image: url(../d012/imagens/background002.jpg);
+    background-image: url('../d012/imagens/background002.jpg');
     background-position: right center;
 }
 
