--- a/modulo III - colocando um prototipo no ar/desafios/d012/style.css
+++ b/modulo III - colocando um prototipo no ar/desafios/d012/style.css
@@ -93,12 +93,12 @@ section.imagem > p {
 
 section#img01 {
     background-image: url('../d012/imagens/background001.jpg');
-    background-position: right center;
+    background-position: right center fixed;
 }
 
 section#img02 {
     background-image: url('../d012/imagens/background002.jpg');
-    background-position: right center;
+    background-position: right center fixed;
 }
 
 footer {
